package com.dainws.games.crm.domain.event;

public interface EventTrigger {
	void setEventPublisher(EventPublisher eventPublisher);
}
